:bug: Fix some bugs
- Content warning words are not counted in word count

- Tootting by pressing super key and enter key even if no focus on text area

- Broken layout when showing a message that a user should auth this app

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -3,7 +3,7 @@ body, #content, #toot, select, #cw-label, #spoiler-text {
 }
 
 .container {
-  width: 600px;
+  width: 620px;
 }
 
 .row {
@@ -15,7 +15,7 @@ body, #content, #toot, select, #cw-label, #spoiler-text {
 }
 
 #words {
-  padding-right: 10px;
+  padding: 0 10px;
 }
 
 #toot {
